compiler/testData/diagnostics/tests/varargs/unresolvedVarargType.kt
// RUN_PIPELINE_TILL: FRONTEND
fun testVarArgs(<!FORBIDDEN_VARARG_PARAMETER_TYPE!>vararg<!> v: <!UNRESOLVED_REFERENCE!>Smth<!>) {}
